# hydropathy

./: README.md  pyproject.toml
data/output_files/: 10_GLY.csv  11_GLY.csv  12_PRO.csv  13_SER.csv  14_SER.csv  15_GLY.csv  16_ARG.csv  17_PRO.csv  18_PRO.csv  19_PRO.csv  1_ASP.csv  20_SER.csv  2_ALA.csv  3_TYR.csv  4_ALA.csv  5_GLN.csv  6_TRP.csv  7_LEU.csv  8_LYS.csv  9_ASP.csv
src/hydropathy/: cli.py  hydropathy.py
