[project]
name = "hydropathy"
version = "0.4.0"
description = "Measures the hydropathy of a solute based on the orientation of surrounding water molecules"
authors = [
    {name = "Leonardo Bò", email = "boleo88@gmail.com"},
]
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "tqdm>=4.66.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "GNU GPLv3"}

[project.scripts]
hydropathy = "hydropathy.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
